# robotics_urdf_indoor

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/matplotlib_cpp/share/matplotlib_cpp/: package.sh
install/my_fusion/lib/my_fusion/: ekf_fusion  ekf_fusion_node
install/my_fusion/lib/my_fusion/scripts/: plot_odom.py
install/my_fusion/share/ament_index/resource_index/package_run_dependencies/: my_fusion
install/my_fusion/share/ament_index/resource_index/parent_prefix_path/: my_fusion
install/my_fusion/share/my_fusion/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_fusion/share/my_fusion/bags/session_20250920_204542/: metadata.yaml  session_20250920_204542_0.db3
install/my_fusion/share/my_fusion/bags/session_20250920_204600/: metadata.yaml
install/my_fusion/share/my_fusion/bags/session_20250921_010257/: metadata.yaml  session_20250921_010257_0.db3
install/my_fusion/share/my_fusion/bags/session_20250921_090217/: metadata.yaml
install/my_fusion/share/my_fusion/bags/session_20250921_093110/: metadata.yaml
install/my_fusion/share/my_fusion/bags/session_20250921_100733/: metadata.yaml
install/my_fusion/share/my_fusion/bags/session_20250921_101835/: metadata.yaml  session_20250921_101835_0.db3
install/my_fusion/share/my_fusion/bags/session_20250921_101857/: metadata.yaml
install/my_fusion/share/my_fusion/bags/session_20250921_102310/: metadata.yaml  session_20250921_102310_0.db3
install/my_fusion/share/my_fusion/bags/session_20250921_102321/: metadata.yaml
install/my_fusion/share/my_fusion/bags/session_20250921_204256/: metadata.yaml
install/my_fusion/share/my_fusion/cmake/: my_fusionConfig-version.cmake  my_fusionConfig.cmake
install/my_fusion/share/my_fusion/config/: ekf.yaml
install/my_fusion/share/my_fusion/environment/: ament_prefix_path.dsv  path.dsv
install/my_fusion/share/my_fusion/launch/: fusion.launch.py  fusion_with_lidar.launch.py
install/my_fusion/share/my_fusion/scripts/: ekf_fusion.py
install/my_odometry/lib/my_odometry/: encoder_odom  imu_odom  lidar_odometry_node  live_plot  move_robot  odom_node
install/my_odometry/share/my_odometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_odometry/share/my_odometry/cmake/: my_odometryConfig-version.cmake  my_odometryConfig.cmake
install/my_odometry/share/my_odometry/environment/: ament_prefix_path.dsv  path.dsv
install/my_odometry/share/my_odometry/launch/: odom.launch.py  odom_with_lidar.launch.py  odom_with_lidar_norecord.launch .py  odom_with_lidar_norecord.launch.py
install/my_odometry/share/my_odometry/rviz/: config.rviz
install/my_odometry/share/my_odometry/scripts/: encoder_odom.py  imu_odom.py  move_robot.py
install/my_robot_description/share/my_robot_description/: package.dsv  package.ps1  package.sh  package.xml
install/my_robot_description/share/my_robot_description/rviz/: config.rviz
install/my_robot_description/share/my_robot_description/urdf/: robot.urdf.xacro
install/my_robot_description/src/my_robot_description/launch/: display.launch.py
install/my_robot_description/src/my_robot_description/urdf/: materials.xacro
install/my_simulation/lib/my_simulation/: velocity_driver
install/my_simulation/share/my_simulation/: package.dsv  package.ps1  package.sh  package.xml
install/my_simulation/share/my_simulation/config/: diffbot_controllers.yaml
install/my_simulation/share/my_simulation/launch/: sim.launch.py  sim_open_control.launch.py
install/my_simulation/src/my_simulation/worlds/: apartment.world
install/my_slam/lib/my_slam/: map_builder  scan_matcher
install/my_slam/share/my_slam/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build  latest_list
src/my_fusion/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_fusion/config/: ekf.yaml
src/my_fusion/include/my_fusion/: ekf_fusion_node.hpp
src/my_fusion/launch/: fusion.launch.py  fusion_with_lidar.launch.py
src/my_fusion/rviz/: fusion.rviz
src/my_fusion/scripts/: ekf_fusion_node.cpp  plot_odom.py
src/my_fusion/src/: ekf_fusion_node.cpp
src/my_odometry/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_odometry/include/my_odometry/: odom_node.hpp
src/my_odometry/launch/: odom.launch.py  odom_with_lidar.launch.py  odom_with_lidar_norecord.launch .py
src/my_odometry/rviz/: config.rviz
src/my_odometry/scripts/: live_plot.cpp  live_plot.py  odom_node.cpp  pre_plot_odom.py
src/my_odometry/src/: lidar_odometry.cpp  odom_node.cpp
src/my_robot_description/: package.xml  setup.cfg  setup.py
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: config.rviz
src/my_robot_description/urdf/: my_diffbot.urdf  robot.urdf.xacro
src/my_simulation/: package.xml  setup.py
src/my_simulation/config/: diffbot_controllers.yaml
src/my_simulation/launch/: sim.launch.py  sim_open_control.launch.py
src/my_simulation/my_simulation/: velocity_driver.py
src/my_simulation/worlds/: apartment.world
src/my_slam/: package.xml  setup.cfg  setup.py
(+16 files in other folders)
